 * ANY SPECIAL, DIRECT, INDIRECT, OR CONSEQUENTIAL DAMAGES OR ANY DAMAGES
 * WHATSOEVER RESULTING FROM LOSS OF USE, DATA OR PROFITS, WHETHER IN AN
 * ACTION OF CONTRACT, NEGLIGENCE OR OTHER TORTIOUS ACTION, ARISING OUT OF
 * OR IN CONNECTION WITH THE USE OR PERFORMANCE OF THIS SOFTWARE.
 * 
 * $Id$
 */
 
TreeTank 4.17
-------------
+ Moved IConstants to utils package. It should no longer be used publicly.
  Use IReadTransaction.isNullNodeKey(key) and getNullNodeKey().
+ Refactored IReadTransaction. Move operations return true if the new node
  could be selected. If not, the cursor stays with the former node and false
  is returned.
+ Refactored IFilter, added AbstractFilter not to pass transaction with each
  call to filter().
+ Introduced Conventions for IAxis. Generic test case added to test all axis
  implementations for convention compliance. Bug fixed with FullTextAxis.
+ BeanUtil now supporting remove().
+ Added readme.txt to provide authoritative coding conventions.
+ Added reset() to IAxis to allow for NestedAxis.
+ Switched to ISC License.
+ Replaced all axis classes performing tests to generic FilterAxis combined
  with IFilter.
+ Completely switched to unchecked exceptions.
 
TreeTank 4.16
-------------
+ WriteTransaction now threadsafe by enforcing single-writer contract.
+ Auto commit now default. User must no longer call commit. Auto commit
  commits after the modification of some nodes as well as before
  IWriteTransaction.close().
+ Idempotent close operation. Multiple calls do no longer hurt.
+ Added ID annotation for beans.
+ BeanUtil now serializing fields as attributes.
+ Added namespace and attribute getters to IReadTransaction.
+ Support wildcard suffix in FullTextAxis. It is activated by * as last
  character in token.
 
TreeTank 4.15
-------------
+ INode no longer part of public API; replaced by AbstractNode.
+ BeanUtil now supports byte[].
+ No longer make INode public. This lead to a variety of use cases mixing